tests/fixtures/positive/supply-chain/dependency-dynamic-version-kts/settings.gradle.kts
rootProject.name = "dependency-dynamic-version-kts-positive"
